# proj_naive-embedded-reconstruction

./: .gitignore  CITATION.cff  CITATION.rff  CONTRIBUTING.md  LICENSE.md  README.md  dataframe_LE-DEBUG.csv  environment.yaml  get_aggregate_dataframe.py  get_reconstruction.py  get_subtensor.py  makefile  pyproject.toml  requirements.txt  science.mplstyle
_research/: Figure4.ipynb  check_renormalization.ipynb  coefs.txt  embedded_naive.ipynb  testing_LE.ipynb  tmp_df.csv  update_LE.ipynb  viz_fixed_n2v.ipynb
data/: DATA_USAGE.md  _attributes.yaml  figure2b_data.pk
docs/: index_experiments.md  science.mplstyle
emb/: __init__.py
notebooks/: EMB_ex02_node2vec-pca_remnants.ipynb  EMB_ex03_mercator-pca_remnants.ipynb  EMB_ex04R_node2vec_remnants.ipynb  EMB_ex04R_viz.ipynb  EMB_ex04_node2vec_LFR-remnants.ipynb  EMB_ex05_mercator_LFR-remnants.ipynb  EMB_ex07R_node2vec_remnants-components.ipynb  benchmark  dataframe_EMB_ex07Rv1.0_DK_20221003.parquet  reference_FR.ipynb
results/: MEC.tgz  concat_df.py  removing_embedding_headers.sh
scripts/: .fix_filenames.py  classifiers_EMB_exSYSREAL_script.py  create_LFR_caches.sh  embed_remnant.py  generate-edgelists_type-LFR_size-manuscript.sh  generate-remnants_type-LFR_size-manuscript.sh  generate_synthetic-LFR.py  observe_remnant.py
src/: Utils.py  __init__.py  depreciations.py  embed.py  glee.py  performance.py  reconstruct.py  synthetic.py  utils.py
test/: test_LFR_partial-info.ipynb  test_disconnected-cliques_full-info.ipynb  test_disconnected-cliques_partial-info.ipynb
tmp_cache/: raw_N=1000_tau1=2.1_tau2=1.0_min-community=10_mu=0.1_avgk=5_prob=0.0_pfi=0.0_prob-model=inverse_repetition=1.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.1_avgk=5_prob=1.0_pfi=0.3_prob-model=inverse_repetition=5.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=inverse_repetition=5.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=logistic_repetition=1.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=logistic_repetition=2.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=logistic_repetition=3.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=logistic_repetition=4.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=logistic_repetition=5.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=negexp_repetition=1.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=negexp_repetition=2.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=negexp_repetition=3.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=negexp_repetition=4.pkl  raw_N=500_tau1=2.1_tau2=1.0_min-community=10_mu=0.3_avgk=5_prob=1.0_pfi=0.4_prob-model=negexp_repetition=5.pkl  (+175 more)
workflow/: Snakefile  add_rep.sh  clean_config  clean_snakefile  config.yaml  pathing.smk  (+1 more)
(+9576 files in other folders)
