# ========== BUILD ===========
[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools'
]

# =========== PROJECT ==========
[project]
# Basic metadata
name = 'EMB'
version = '3.0.0'
authors = [
    {name='Daniel Kaiser', email='kaiserd@iu.edu'},
]
readme = 'README.md'
classifiers = ['License :: MIT License']
description = "Tools for the reconstruction of multiplex networks from partial structural observations via graph embeddings."

# Package dependencies
requires-python = '>=3.10'
dependencies = [
    # Numerical core
    'numpy>=1.25',
    'scipy>=1.11',
    'scikit-learn>=1.3.0',
    # Netsci - core
    'networkx>=3.0',
    # Netsci - embedding
    'gensim>=4.3',
]

[project.optional-dependencies]
test = [
    'pytest>=7'
]
workflow = [
    # Notebook kernels
    'ipykernel',
    'tqdm', 'jupyter', 'ipywidgets',
    # Workflow manager
    'snakemake',
    # Data handling
    'pandas',
    # Visualization
    'matplotlib',
    'seaborn'
]
