[tool.poetry]
name = "emb"
version = "4.0.0.19-alpha"
description = "Tools for the reconstruction of multiplex networks from partial structural observations via graph embeddings."
authors = ["Daniel Kaiser <kaiserd@iu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
scipy = "^1.11.3"
scikit-learn = "^1.3.1"
networkx = "^3.1"
gensim = "^4.3.2"
loguru = "^0.7.2"
rich = "^13.6.0"
python-ternary = "^1.0.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
hypothesis = "^6.87.3"


[tool.poetry.group.workflow.dependencies]
snakemake = "^7.32.4"
pandas = "^2.1.1"


[tool.poetry.group.visualization.dependencies]
jupyter = "^1.0.0"
ipython = "^8.16.1"
visidata = "^2.11.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
